fix css issue on mobile safari

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ table {
 	border: 4px solid #504E4E;
 }
 
-td>input {
+td>input[type=text] {
 	width: 50px;
 	height: 50px;
     font-size: 25pt;
